--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,32 @@
 {
-  "extends": ["eslint:recommended","prettier"],
-  "plugins": [],
+  "extends": [
+    "eslint:recommended",
+    "plugin:import/errors",
+    "plugin:react/recommended",
+    "plugins:jsx-a11y/recommended",
+    "plugins:react-hooks/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "react/prop-types": 0,
+    "react/react-in-jsx-scope": 0
+  },
+  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
   "parserOptions": {
-   "ecmaVersion": 2022,
-   "sourceType": "module",
-   "ecmaFeatures": {
-    "jsx": true
-   }
+    "ecmaVersion": 2022,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "es6": true,
     "browser": true,
     "node": true
+  },
+  "settings": {
+    "react": {
+      "versions": "detect"
+    }
   }
 }
